--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,12 @@ Date: 2020-09-11
   Todo:
     - Make pure lua parts of the library seperately loadable.
     - Make the library loadable in a "static" manner where it does not configure itself.
-    - Add auto-config function to set up the full library at once inside a mod. Including dev-flags.
+    - Add auto-config function to set up the full library once inside a mod. Including dev-flags.
+---------------------------------------------------------------------------------------------------
+Version: 4.0.9
+Date: 2020-09-x
+  Internal:
+    - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.8
 Date: 2020-09-x
@@ -12,9 +17,9 @@ Date: 2020-09-x
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.7
-Date: 2020-09-x
+Date: 2020-09-16
   Internal:
-    - ?
+    - Added Zip with LibDeflate
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.6
 Date: 2020-09-16
