--- a/changelog.txt
+++ b/changelog.txt
@@ -6,18 +6,18 @@ Date: 2020-09-11
     - Make the library loadable in a "static" manner where it does not configure itself.
     - Add auto-config function to set up the full library once inside a mod. Including dev-flags.
 ---------------------------------------------------------------------------------------------------
-Version: 4.0.11
+Version: 4.0.12
 Date: 2020-09-x
   Internal:
     - ?
 ---------------------------------------------------------------------------------------------------
-Version: 4.0.10
-Date: 2020-09-x
+Version: 4.0.11
+Date: 2020-09-19
   Internal:
-    - ?
+    - Lambda module is complete.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.9
-Date: 2020-09-x
+Date: 2020-09-18
   Features:
     - Added assets/empty.ogg
   Internal:
@@ -28,11 +28,6 @@ Date: 2020-09-x
     - Added (at least some) tests for each Coding sub-module.
     - Coding is functionally complete.
     - Added Debug.get_upvalue_tree() draft
----------------------------------------------------------------------------------------------------
-Version: 4.0.8
-Date: 2020-09-x
-  Internal:
-    - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.7
 Date: 2020-09-16
