--- a/changelog.txt
+++ b/changelog.txt
@@ -9,7 +9,7 @@ Date: 2020-09-11
 Version: 4.0.12
 Date: 2020-09-x
   Internal:
-    - ?
+    - New function String.f
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.11
 Date: 2020-09-19
