finished String module

--- a/changelog.txt
+++ b/changelog.txt
@@ -28,9 +28,9 @@ Date: 2020-09-x
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.15
-Date: 2020-09-x
+Date: 2020-09-24
   Internal:
-    - ?
+    - New module Set
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.14
 Date: 2020-09-23
