new module Class

--- a/changelog.txt
+++ b/changelog.txt
@@ -31,6 +31,7 @@ Version: 4.0.15
 Date: 2020-09-24
   Internal:
     - New module Set
+    - New module Class
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.14
 Date: 2020-09-23
