new module Array + Tests

--- a/changelog.txt
+++ b/changelog.txt
@@ -23,9 +23,10 @@ Date: 2020-09-x
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.16
-Date: 2020-09-x
+Date: 2020-09-29
   Internal:
-    - ?
+    - New module Array + Tests
+    - New function Iter.array_pairs
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.15
 Date: 2020-09-24
