--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 9.9.9
-Date: 2020-09-11
+Date: 2020-xx-xx
   Roadmap:
     - Make pure lua parts of the library seperately loadable.
     - Make the library loadable in a "static" manner where it does not configure itself.
@@ -8,31 +8,33 @@ Date: 2020-09-11
 
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.19
-Date: 2020-09-x
+Date: 2020-10-x
   Internal:
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.18
-Date: 2020-09-x
+Date: 2020-10-x
   Internal:
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.17
-Date: 2020-09-x
+Date: 2020-10-x
   Internal:
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.16
-Date: 2020-09-29
+Date: 2020-10-03
   Internal:
-    - ?
+    - New module Table
+    - New test Table.*
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.15
 Date: 2020-09-29
   Internal:
     - New module Set
     - New module Class
-    - New module Array + Tests
+    - New module Array
+    - New test Array.*
     - New function Iter.array_pairs
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.14
@@ -42,7 +44,7 @@ Date: 2020-09-23
     - New function Iter.filter_pairs
     - New test Assumptions
     - New module Version
-    - New test Version
+    - New test Version.*
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.13
 Date: 2020-09-23
