EventManager and a bunch of other stuff

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,12 +13,16 @@ Date: 2020-10-x
     - ?
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.18
-Date: 2020-10-x
+Date: 2020-10-21
   Internal:
-    - ?
+    - Added factorio object class awareness to Hydra
+    - New function Array.insert_array
+    - New function Array.flatten
+    - New module EventManager
+    - New remote shared_event_uids
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.17
-Date: 2020-10-04
+Date: 2020-10-06
   Internal:
     - New module Math
     - New module Verificate
