--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.2
+Version: 4.1.3
 Date: 2021-x-x
   Internal:
     - ?
+---------------------------------------------------------------------------------------------------
+Version: 4.1.2
+Date: 2021-05-19
+  Functions:
+    - Added <true> and <false> boolean type compatibility to Verificate.verify.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.1
 Date: 2021-04-x
