--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,15 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.3
+Version: 4.1.4
 Date: 2021-x-x
   Internal:
     - ?
+---------------------------------------------------------------------------------------------------
+Version: 4.1.3
+Date: 2021-05-21
+  Functions:
+    - Added Remote.get_interface
+    - Added Player.get_player
+    - New module Setting
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.2
 Date: 2021-05-21
