--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,18 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.5
+Version: 4.1.6
 Date: 2021-x-x
   Internal:
     - ?
 ---------------------------------------------------------------------------------------------------
+Version: 4.1.5
+Date: 2021-05-24
+  Hooks:
+    - Babelfish remote interface added, cleaned up and fully documented.
+---------------------------------------------------------------------------------------------------
 Version: 4.1.4
-Date: 2021-05-??
-  Internal:
-    - ?
+Date: 2021-05-23
+  Hooks:
+    - Babelfish prototype complete with indicator and search command.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.3
 Date: 2021-05-22
