babelfish unicode find support

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,8 @@ Date: 2021-05-25
   Hooks:
     - Babelfish: Network rate control is more accurate now.
     - Babelfish: Added can_find, get_player_language_code and get_translation_percentages.
+    - Babelfish: Fuzzy find mode no longer depends on lua pattern matching.
+    - Babelfish: Fuzzy and plain find modes should now work better with unicode.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.5
 Date: 2021-05-24
