--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,16 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.7
+Version: 4.1.8
 Date: 2021-x-x
   Functions:
     - ?
+---------------------------------------------------------------------------------------------------
+Version: 4.1.7
+Date: 2021-05-26
+  Internal:
+    - Hardcoded PluginManagerLite event order to prevent incorrect usage.
+  Functions:
+    - Replaced Table.has_value with Table.find
+    - Added 'erlib:managed-events' PIG support to EventManagerLite.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.6
 Date: 2021-05-25
@@ -102,7 +110,7 @@ Date: 2020-10-21
     - New function Array.flatten
     - New module EventManager
     - New remote shared_event_uids
-  Fixes:
+  Bugfixes:
     - Fixes Stacktrace not working with long file paths.
     - Stacktrace directory paths now always include a trailing / slash.
 ---------------------------------------------------------------------------------------------------
