--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,8 @@ Date: 2021-06-??
   Hooks:
     - Babelfish: Fixed soft-update of old dictionary after mod changes.
     - Babelfish: Unlocalised descriptions are now treated as empty strings.
+  Functions:
+    - Cache.AutoCache now works with ipairs().
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.9
 Date: 2021-06-04
