--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ Date: 2021-06-06
       Thank you both very much.
     - Profiler: Updated info.json to Factorio version 1.1.
     - Profiler: Fixed that assert() intercept did not return the input value.
+    - Universal Locale: Fixed mod setting default value injection into wrong language.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.10
 Date: 2021-06-04
