--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,20 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.14
+Version: 4.1.15
 Date: 2021-x-x
   Functions:
-    - ?
+    - Added
+---------------------------------------------------------------------------------------------------
+Version: 4.1.14
+Date: 2021-07-05
+  Functions:
+    - Added automatic adjustement of minable.result to Data.Inscribe forking.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.13
 Date: 2021-06-14
   Functions:
     - Player.notify position not defaults to cursor position.
+  Plugins:
+    - Babelfish: Added virtual_signal support.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.12
 Date: 2021-06-08
