on_player_changed_chunk fixed missing area

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,15 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.15
+Version: 4.1.16
 Date: 2021-x-x
   Functions:
     - Added
+---------------------------------------------------------------------------------------------------
+Version: 4.1.15
+Date: 2021-07-10
+  Functions:
+    - Added
+  Bugfixes:
+    - Fixed missing area in on_player_changed_chunk when changing surfaces.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.14
 Date: 2021-07-05
