--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,19 @@
 ---------------------------------------------------------------------------------------------------
-Version: 4.1.16
+Version: 4.1.18
 Date: 2021-x-x
   Functions:
     - Added
+---------------------------------------------------------------------------------------------------
+Version: 4.1.17
+Date: 2021-7-13
+  Functions:
+    - New module Prototype
+    - Added Prototype.get_absolute_order
+---------------------------------------------------------------------------------------------------
+Version: 4.1.16
+Date: 2021-7-12
+  Bugfixes:
+    - Fixed something. Forgot what it was. ^_^"
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.15
 Date: 2021-07-10
