babelfish support for all prototype tables

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 4.1.20
+Date: 2021-7-16
+  Bugfixes:
+    - Fixed Prototype.get_absolute_order for item sub/group.
+---------------------------------------------------------------------------------------------------
 Version: 4.1.19
 Date: 2021-7-15
   Plugins:
