--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,19 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.20
 Date: 2021-7-16
+  Functions:
+    - Added Locale.compress which replaces Locale.merge
+    - Added EventManagerLite.object_name
+    - Added remotes.events for easy cross-mod event sharing.
   Bugfixes:
     - Fixed Prototype.get_absolute_order for item sub/group.
+  Plugins:
+    - Babelfish: Added 3 icons for mods to use.
+    - Babelfish: Added on_babelfish_translation_state_changed event.
+    - Babelfish: Updated demo to include event demonstration and type selection.
+    - Babelfish: Fixed another "malformed pattern" error in lua-find-mode.
+    - Babelfish: Made babelfish-demo a seperate plugin.
+    - Integrated erlib_configure_plugin into erlib_enable_plugin.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.19
 Date: 2021-7-15
