--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 4.1.21
+Date: 2021-7-28
+  Bugfixes:
+    - PluginManagerLite errored when savedata management was enabled but
+      no plugin actually used it.
+---------------------------------------------------------------------------------------------------
 Version: 4.1.20
 Date: 2021-7-21
   Functions:
