--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 4.1.24
+Date: 2021-8-15
+  Functions:
+    - Added Array.fisher_yates_shuffle
+    - Added cache clearing function for multi-argument Memoize.
+  Bugfixes:
+    - Removed hardcoded alpha from Color() logistic colors.
+---------------------------------------------------------------------------------------------------
 Version: 4.1.23
 Date: 2021-8-14
   Functions:
