--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 4.1.25
+Date: 2021-8-18
+  Functions:
+    - Breaking Change! Array.deduplicate now takes a parameter "f_ident"
+      to facilitate deduplicating complex arrays.
+---------------------------------------------------------------------------------------------------
 Version: 4.1.24
 Date: 2021-8-15
   Functions:
